--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,11 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.note-css {
+    margin: auto;
+    background-color: azure;
+    width: 40rem;
+    border-color: black;
+    border: 1px solid;
+}
+li:hover span{
+    display: flex;
+    color:red;
+}
