--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,13 @@
     border-color: black;
     border: 1px solid;
 }
-li:hover span{
-    display: flex;
+.fa-trash-alt:hover{
+
     color:red;
+}
+.fa-check-square:hover {
+    color:lawngreen;
+}
+.done{
+    color:lawngreen;
 }
